fixed the channel list sidebars z-index

--- a/dsn-server.css
+++ b/dsn-server.css
@@ -14,6 +14,7 @@
   }
   
   .sidebar_e031be{
+    z-index: auto !important;
     overflow: visible;
   }
   
